--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
       <h1>
         <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <img src="assets/img/logo_karawang.png" alt="">
-        Cadaskertajaya</a>
+        <img src="assets/img/logo_karawang.png" alt="">Cadaskertajaya</a>
       </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
