--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       </div>
       <!-- End Modal -->
       <!-- Modal SK Domisili-->
-      <div class="modal fade" id="  ModelSKdomisili" role="dialog">
+      <div class="modal fade" id="ModelSKdomisili" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <!-- Modal Header -->
@@ -261,11 +261,11 @@
           </div>
 
           <div class="row" data-aos="zoom-in" data-aos-delay="100">
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-toggle="modal" data-target="#ModelSKU">
               <div class="course-item">
                 <img src="assets/img/SKU.png" class="img-fluid" alt="..." />
                 <div class="course-content">
-                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalForm">SKU (Surat Keterangan Usaha)</button>
+                   <h3><a data-toggle="modal" data-target="#ModelSKU">SKTM (Surat Keterangan Tidak Mampu)</a></h3>
                   <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                 </div>
               </div>
