--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <div class="course-item">
                 <img src="assets/img/SKU.png" class="img-fluid" alt="..." />
                 <div class="course-content">
-                   <h3><a data-toggle="modal" data-target="#ModelSKU">SKTM (Surat Keterangan Tidak Mampu)</a></h3>
+                   <h3><a data-toggle="modal" data-target="#ModelSKU">SKU (Surat Keterangan Usaha)</a></h3>
                   <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                 </div>
               </div>
