--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="https://karawangkab.go.id/sites/default/files/krw-icon.png" rel="shortcut icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -44,7 +44,7 @@
 
       <h1>
         <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
-        <img src="assets/img/logo_karawang.png" alt="">
+        <img src="https://karawangkab.go.id/sites/default/files/krw-icon.png" alt="">
         Cadaskertajaya</a>
       </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
@@ -53,25 +53,8 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          
-          <li class="dropdown"><a href="#"><span>Profil Desa</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="peta_desa.html">Peta Desa</a></li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#"><span>Kelembagaan Desa</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a href="courses.html">Pelayanan Publik</a></li>
-          <li><a href="contact.html">Kontak Kami</a></li>
+          <li><a href="#Pelayanan">Pelayanan Publik</a></li>
+          <li><a href="#Contant">Kontak Kami</a></li>
         </ul>
     </div>
   </header><!-- End Header -->
@@ -253,7 +236,7 @@
       </div>
       <!-- End Modal -->
       <!-- ======= Popular Courses Section ======= -->
-      <section id="popular-courses" class="courses">
+      <section id="Pelayanan" class="courses">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>PELAYANAN</h2>
@@ -261,7 +244,7 @@
           </div>
 
           <div class="row" data-aos="zoom-in" data-aos-delay="100">
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-toggle="modal" data-target="#ModelSKU">
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-toggle="modal" data-target="#ModelSKU">
               <div class="course-item">
                 <img src="assets/img/SKU.png" class="img-fluid" alt="..." />
                 <div class="course-content">
@@ -272,10 +255,10 @@
             </div>
             <!-- End Course Item-->
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-toggle="modal" data-target="#ModelSKTM">
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-toggle="modal" data-target="#ModelSKTM">
               <div class="course-item">
                 <img src="assets/img/SKTM.png" class="img-fluid" alt="..." />
-                <div class="course-content" align="Center">
+                <div class="course-content">
                   <h3><a data-toggle="modal" data-target="#ModelSKTM">SKTM (Surat Keterangan Tidak Mampu)</a></h3>
                   <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                 </div>
@@ -283,7 +266,16 @@
             </div>
             <!-- End Course Item-->
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-toggle="modal" data-target="#ModelSKdomisili">
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-toggle="modal" data-target="#ModelSKdomisili">
+              <div class="course-item">
+                <img src="assets/img/SK_domisili.png" class="img-fluid" alt="..." />
+                <div class="course-content">
+                  <h3><a data-toggle="modal" data-target="#ModelSKdomisili">SK Domisili</a></h3>
+                  <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-toggle="modal" data-target="#ModelSKdomisili">
               <div class="course-item">
                 <img src="assets/img/SK_domisili.png" class="img-fluid" alt="..." />
                 <div class="course-content">
@@ -301,7 +293,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <footer id="footer">
+    <footer id="Contant">
       <div class="footer-top">
         <div class="container">
           <div class="row">
