--- a/index.html
+++ b/index.html
@@ -73,17 +73,16 @@
         <div class="container" data-aos="fade-up">
           <div class="row">
             <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/pelayanan.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-              <h3>Visi Misi</h3>
-              <p class="fst-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-              </ul>
-              <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+              <h3>Pelayanan Publik</h3>
+              <p class="fst-italic">Menurut Undang-Undang Nomor 25 Tahun 2009 tentang Pelayanan Publik adalah 
+                kegiatan atau rangkaian kegiatan dalam rangka pemenuhan kebutuhan pelayanan sesuai dengan peraturan perundang-undangan bagi 
+                setiap warga negara dan penduduk atas barang, jasa, dan/atau pelayanan administratif yang disediakan oleh penyelenggara pelayanan publik. 
+                Kata "barang, jasa dan pelayanan administratif" dalam bagian penjelasan dianggap sudah jelas, tetapi sebenarnya maksud "barang" 
+                bukanlah barang yang bisa diperdagangkan oleh manusia sehari-hari tetapi yang dimaksud adalah barang publik (public goods) yang penyediannya 
+                dilakukan oleh pemerintah.</p>
             </div>
           </div>
         </div>
@@ -129,17 +128,68 @@
             <div class="modal-body">
               <p class="statusMsg"></p>
               <form role="form">
-                <div class="form-group">
-                  <label for="inputName">Name</label>
-                  <input type="text" class="form-control" id="inputName" placeholder="Enter your name" />
+                <div>
+                  <h4>Data Pemilik Usaha</h4>
                 </div>
                 <div class="form-group">
-                  <label for="inputEmail">Email</label>
-                  <input type="email" class="form-control" id="inputEmail" placeholder="Enter your email" />
+                  <label for="inputNama">Nama</label>
+                  <input type="text" class="form-control" id="inputNama" placeholder="Masukan nama" />
                 </div>
                 <div class="form-group">
-                  <label for="inputMessage">Message</label>
-                  <textarea class="form-control" id="inputMessage" placeholder="Enter your message"></textarea>
+                  <label for="inputTtl">Tempat/Tanggal Lahir</label>
+                  <input type="text" class="form-control" id="inputTtl" placeholder="Masukan tempat tanggal lahir" />
+                </div>
+                <div class="form-group">
+                  <label for="inputJeniskelamin">Jenis Kelamin</label>
+                  <input type="text" class="form-control" id="inputJeniskelamin" placeholder="Masukan jenis kelamin" />
+                </div>
+                <div class="form-group">
+                  <label for="inputAlamat">Alamat</label>
+                  <input type="text" class="form-control" id="inputAlamat" placeholder="Masukan alamat" />
+                </div>
+                <div class="form-group">
+                  <label for="inputAgama">Agama</label>
+                  <input type="text" class="form-control" id="inputAgama" placeholder="Masukan agama" />
+                </div>
+                <div class="form-group">
+                  <label for="inputStatusperkawinan">Status Perkawinan</label>
+                  <input type="text" class="form-control" id="inputStatusperkawinan" placeholder="Masukan status perkawinan" />
+                </div>
+                <div class="form-group">
+                  <label for="inputPekerjaan">Pekerjaan</label>
+                  <input type="text" class="form-control" id="inputPekerjaan" placeholder="Masukan pekerjaan" />
+                </div>
+                <div class="form-group">
+                  <label for="inputKewarganegaraan">Kewarganegaraan</label>
+                  <input type="text" class="form-control" id="inputKewarganegaraan" placeholder="Masukan kewarganegaraan" />
+                </div>
+                <div class="form-group">
+                  <label for="inputNik">NIK</label>
+                  <input type="text" class="form-control" id="inputNik" placeholder="Masukan NIK" />
+                </div>
+                <div>
+                  <br>
+                  <h4>Data Usaha</h4>
+                </div>
+                <div class="form-group">
+                  <label for="inputTahunusaha">Tahun Awal Usaha</label>
+                  <input type="text" class="form-control" id="inputTahunusaha" placeholder="Masukan tahun awal usaha" />
+                </div>
+                <div class="form-group">
+                  <label for="inputNamausaha">Nama Usaha</label>
+                  <input type="text" class="form-control" id="inputNamausaha" placeholder="Masukan nama usaha" />
+                </div>
+                <div class="form-group">
+                  <label for="inputJenisusaha">Jenis Usaha</label>
+                  <input type="text" class="form-control" id="inputJenisusaha" placeholder="Masukan jenis usaha" />
+                </div>
+                <div class="form-group">
+                  <label for="inputNib">Nomor Induk Berusaha</label>
+                  <input type="text" class="form-control" id="inputNib" placeholder="Masukan Nomor Induk Berusaha" />
+                </div>
+                <div class="form-group">
+                  <label for="inputLokasi">Lokasi Usaha</label>
+                  <input type="text" class="form-control" id="inputLokasi" placeholder="Masukan lokasi usaha" />
                 </div>
               </form>
             </div>
@@ -153,13 +203,13 @@
         </div>
       </div>
       <!-- End Modal -->
-      <!-- Modal SKTM -->
-      <div class="modal fade" id="ModelSKTM" role="dialog">
+      <!-- Modal SKM -->
+      <div class="modal fade" id="ModelSKM" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <!-- Modal Header -->
             <div class="modal-header">
-              <h2>Formulir SKTM</h2>
+              <h2>Formulir SKM</h2>
               <button type="button" class="close" data-dismiss="modal">
                 <span aria-hidden="true">&times;</span>
                 <span class="sr-only">Close</span>
@@ -170,17 +220,76 @@
             <div class="modal-body">
               <p class="statusMsg"></p>
               <form role="form">
-                <div class="form-group">
-                  <label for="inputName">Name</label>
-                  <input type="text" class="form-control" id="inputName" placeholder="Enter your name" />
+                <div>
+                  <h4>Yang bertanda tangan dibawah ini, menerangkan bahwa</h4>
                 </div>
                 <div class="form-group">
-                  <label for="inputEmail">Email</label>
-                  <input type="email" class="form-control" id="inputEmail" placeholder="Enter your email" />
+                  <label for="inputNama">Nama Lengkap</label>
+                  <input type="text" class="form-control" id="inputNama" placeholder="Masukan nama" />
                 </div>
                 <div class="form-group">
-                  <label for="inputMessage">Message</label>
-                  <textarea class="form-control" id="inputMessage" placeholder="Enter your message"></textarea>
+                  <label for="inputNik">NIK</label>
+                  <input type="text" class="form-control" id="inputNik" placeholder="Masukan NIK" />
+                </div>
+                <div class="form-group">
+                  <label for="inputUmur">Umur</label>
+                  <input type="text" class="form-control" id="inputUmur" placeholder="Masukan umur" />
+                </div>
+                <div class="form-group">
+                  <label for="inputPekerjaan">Pekerjaan</label>
+                  <input type="text" class="form-control" id="inputPekerjaan" placeholder="Masukan pekerjaan" />
+                </div>
+                <div class="form-group">
+                  <label for="inputAlamat">Alamat KTP</label>
+                  <input type="text" class="form-control" id="inputAlamat" placeholder="Masukan alamat" />
+                </div>
+                <div>
+                  <br>
+                  <h4>Telah meninggal dunia pada</h4>
+                </div>
+                <div class="form-group">
+                  <label for="inputHari">Hari</label>
+                  <input type="text" class="form-control" id="inputHari" placeholder="Masukan hari" />
+                </div>
+                <div class="form-group">
+                  <label for="inputPukul">Pukul</label>
+                  <input type="text" class="form-control" id="inputPukul" placeholder="Masukan pukul" />
+                </div>
+                <div class="form-group">
+                  <label for="inputTempatkematian">Tempat Kematian</label>
+                  <input type="text" class="form-control" id="inputTempatkematian" placeholder="Masukan tempat kematian" />
+                </div>
+                <div class="form-group">
+                  <label for="inputPenyebabkematian">Penyebab Kematian</label>
+                  <input type="text" class="form-control" id="inputPenyebabkematian" placeholder="Masukan penyebab kematian" />
+                </div>
+                <div>
+                  <br>
+                  <h4>Surat keterangan ini dibuat berdasarkan Keterangan pelapor</h4>
+                </div>
+                <div class="form-group">
+                  <label for="inputNama">Nama Lengkap</label>
+                  <input type="text" class="form-control" id="inputNama" placeholder="Masukan nama" />
+                </div>
+                <div class="form-group">
+                  <label for="inputNik">NIK</label>
+                  <input type="text" class="form-control" id="inputNik" placeholder="Masukan NIK" />
+                </div>
+                <div class="form-group">
+                  <label for="inputUmur">Umur</label>
+                  <input type="text" class="form-control" id="inputUmur" placeholder="Masukan umur" />
+                </div>
+                <div class="form-group">
+                  <label for="inputPekerjaan">Pekerjaan</label>
+                  <input type="text" class="form-control" id="inputPekerjaan" placeholder="Masukan pekerjaan" />
+                </div>
+                <div class="form-group">
+                  <label for="inputAlamat">Alamat KTP</label>
+                  <input type="text" class="form-control" id="inputAlamat" placeholder="Masukan alamat" />
+                </div>
+                <div class="form-group">
+                  <label for="inputHubungan">Hubungan Pelapor Dengan Yang Meninggal Dunia</label>
+                  <input type="text" class="form-control" id="inputHubungan" placeholder="Masukan hubungan pelapor dengan yang meninggal dunia" />
                 </div>
               </form>
             </div>
@@ -255,11 +364,11 @@
             </div>
             <!-- End Course Item-->
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-toggle="modal" data-target="#ModelSKTM">
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-toggle="modal" data-target="#ModelSKM">
               <div class="course-item">
                 <img src="assets/img/SKTM.png" class="img-fluid" alt="..." />
                 <div class="course-content">
-                  <h3><a data-toggle="modal" data-target="#ModelSKTM">SKTM (Surat Keterangan Tidak Mampu)</a></h3>
+                  <h3><a data-toggle="modal" data-target="#ModelSKM">SKM (Surat Keterangan Kematian)</a></h3>
                   <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                 </div>
               </div>
@@ -268,7 +377,7 @@
 
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-toggle="modal" data-target="#ModelSKdomisili">
               <div class="course-item">
-                <img src="assets/img/SK_domisili.png" class="img-fluid" alt="..." />
+                <img src="assets/img/skdomisili.png" class="img-fluid" alt="..." />
                 <div class="course-content">
                   <h3><a data-toggle="modal" data-target="#ModelSKdomisili">SK Domisili</a></h3>
                   <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
@@ -277,7 +386,7 @@
             </div>
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-toggle="modal" data-target="#ModelSKdomisili">
               <div class="course-item">
-                <img src="assets/img/SK_domisili.png" class="img-fluid" alt="..." />
+                <img src="assets/img/skdomisili.png" class="img-fluid" alt="..." />
                 <div class="course-content">
                   <h3><a data-toggle="modal" data-target="#ModelSKdomisili">SK Domisili</a></h3>
                   <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
