--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
+ <!-- ======= Header ======= -->
+  <header id="header" class="navbar navbar-light bg-light">
+    <div class="container-fluid">
 
       <h1>
         <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
@@ -50,7 +50,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
+      <nav id="navbar" class="d-flex">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="#Pelayanan">Pelayanan Publik</a></li>
