--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           <li><a href="#Pelayanan">Pelayanan Publik</a></li>
           <li><a href="#Contant">Kontak Kami</a></li>
         </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav>
     </div>
   </header><!-- End Header -->
 
