--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
+      <i class="bi bi-list mobile-nav-toggle"></i>
       <nav id="navbar" class="d-flex">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
@@ -524,13 +524,6 @@
           <div class="copyright">
             &copy; Copyright <strong><span>KKN UNSIKA FASILKOM 2023</span></strong
             >. All Rights Reserved
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
